Fix CI database configuration: Use MySQL for tests
Problem: CI was failing because test config used SQLite but CI expects MySQL

Solution: Updated test environment to use MySQL for production parity
- config/database.yml: test environment now uses MySQL (same as CI)
- .gitignore: Updated to ignore any SQLite files (*.sqlite3)
- README.md: Updated to reflect MySQL for both production and testing
- Gemfile: Updated SQLite comment (now optional for local dev)

Benefits:
- Production parity: Tests run against same DB engine as production
- CI compatibility: Matches the MySQL service in GitHub Actions
- Migration testing: Database migrations tested against production engine
- SQL dialect consistency: Catches MySQL-specific issues

CI should now pass the database connection and test steps.

--- a/.gitignore
+++ b/.gitignore
@@ -64,5 +64,5 @@ yarn-debug.log*
 # Ignore coverage reports
 /coverage/
 
-# Ignore test database
-/db/test.sqlite3
+# Ignore SQLite databases (if used locally)
+*.sqlite3
