--- a/config/database.yml
+++ b/config/database.yml
@@ -49,20 +49,7 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: lifebar_production
-    username: lifebar
-    password: <%= ENV["LIFEBAR_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: lifebar_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: lifebar_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: lifebar_production_cable
-    migrations_paths: db/cable_migrate
+  <<: *default
+  url: <%= ENV["DATABASE_URL"] || ENV["MYSQL_PUBLIC_URL"] %>
+  # Railway MySQL configuration
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
